[gd_scene load_steps=2 format=3 uid="uid://q5vgm3ca3pnn"]

[ext_resource type="Script" uid="uid://xjxpcq3lpfe6" path="res://menus/licenses/license_info.gd" id="1_6xru3"]

[node name="LicenseInfo" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_6xru3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DetailsContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Description"

[node name="DescriptionText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DetailsContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16

[node name="CopyrightLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Copyright"

[node name="CopyrightText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16
fit_content = true

[node name="LicensesLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "License"

[node name="LicensesNames" type="RichTextLabel" parent="MarginContainer/VBoxContainer/DetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 16
fit_content = true

[node name="WebLabel" type="Label" parent="MarginContainer/VBoxContainer/DetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Web"

[node name="WebText" type="LinkButton" parent="MarginContainer/VBoxContainer/DetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.368627, 0.505882, 0.67451, 1)
theme_override_colors/font_pressed_color = Color(0.4785, 0.654675, 0.87, 1)
theme_override_colors/font_hover_color = Color(0.1692, 0.30456, 0.47, 1)
theme_override_colors/font_hover_pressed_color = Color(0.478431, 0.654902, 0.870588, 1)

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LicensesTextTemplate" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
fit_content = true
scroll_active = false

[connection signal="item_rect_changed" from="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/LicensesTextTemplate" to="." method="_on_resize"]
